--- a/master.html
+++ b/master.html
@@ -112,15 +112,15 @@
       <input type="radio" name="category" value="POLEARM" onchange="sendResults(this.name, this.value)">Polearm
 
     <br>
-      <input type="radio" name="side-0" value="Tanaka.J" onchange="sendResults(this.name, this.value)">Tanaka.J  |  Tanaka.J<input type="radio" name="side-1" value="Tanaka.J" onchange="sendResults(this.name, this.value)"><br>
+      <input type="radio" name="side-0" value="J.Tanaka" onchange="sendResults(this.name, this.value)">J.Tanaka  |  J.Tanaka<input type="radio" name="side-1" value="J.Tanaka" onchange="sendResults(this.name, this.value)"><br>
       <input type="radio" name="side-0" value="Tada" onchange="sendResults(this.name, this.value)">Tada  |  Tada<input type="radio" name="side-1" value="Tada" onchange="sendResults(this.name, this.value)"><br>
       <input type="radio" name="side-0" value="Tony" onchange="sendResults(this.name, this.value)">Tony  |  Tony<input type="radio" name="side-1" value="Tony" onchange="sendResults(this.name, this.value)"><br>
       <input type="radio" name="side-0" value="Joshua" onchange="sendResults(this.name, this.value)">Joshua  |  Joshua<input type="radio" name="side-1" value="Joshua" onchange="sendResults(this.name, this.value)"><br>
       <input type="radio" name="side-0" value="Satou" onchange="sendResults(this.name, this.value)">Satou  |  Satou<input type="radio" name="side-1" value="Satou" onchange="sendResults(this.name, this.value)"><br>
       <input type="radio" name="side-0" value="Ami" onchange="sendResults(this.name, this.value)">Ami  |  Ami<input type="radio" name="side-1" value="Ami" onchange="sendResults(this.name, this.value)"><br>
-      <input type="radio" name="side-0" value="F7" onchange="sendResults(this.name, this.value)">F7  |  F7<input type="radio" name="side-1" value="F7" onchange="sendResults(this.name, this.value)"><br>
-      <input type="radio" name="side-0" value="Tanaka.K" onchange="sendResults(this.name, this.value)">Tanaka.K  |  Tanaka.K<input type="radio" name="side-1" value="Tanaka.K" onchange="sendResults(this.name, this.value)"><br>
-      <input type="radio" name="side-0" value="F9" onchange="sendResults(this.name, this.value)">F9  |  F9<input type="radio" name="side-1" value="F9" onchange="sendResults(this.name, this.value)"><br>
+      <input type="radio" name="side-0" value="Sagamigawa" onchange="sendResults(this.name, this.value)">Sagamigawa  |  Sagamigawa<input type="radio" name="side-1" value="Sagamigawa" onchange="sendResults(this.name, this.value)"><br>
+      <input type="radio" name="side-0" value="K.Tanaka" onchange="sendResults(this.name, this.value)">K.Tanaka  |  K.Tanaka<input type="radio" name="side-1" value="K.Tanaka" onchange="sendResults(this.name, this.value)"><br>
+      <input type="radio" name="side-0" value="Fudo" onchange="sendResults(this.name, this.value)">Fudo  |  Fudo<input type="radio" name="side-1" value="Fudo" onchange="sendResults(this.name, this.value)"><br>
       <input type="radio" name="side-0" value="Dracones" onchange="sendResults(this.name, this.value)">Dracones  |  Dracones<input type="radio" name="side-1" value="Dracones" onchange="sendResults(this.name, this.value)"><br>
       <input type="radio" name="side-0" value="Sanglier" onchange="sendResults(this.name, this.value)">Sanglier  |  Sanglier<input type="radio" name="side-1" value="Sanglier" onchange="sendResults(this.name, this.value)"><br>
       <input type="radio" name="side-0" value="Kuroganeshu" onchange="sendResults(this.name, this.value)">Kuroganeshu  |  Kuroganeshu<input type="radio" name="side-1" value="Kuroganeshu" onchange="sendResults(this.name, this.value)">
@@ -131,9 +131,9 @@
         <th style="border-width:1px;border-style:solid;"></th>
         <th colspan="6" style="border-width:1px;border-style:solid;">Sword &amp; Shield</th>
         <th colspan="6" style="border-width:1px;border-style:solid;">Longsword</th>
-        <th colspan="6" style="border-width:1px;border-style:solid;">Poleaxe</th></tr>
+        <th colspan="6" style="border-width:1px;border-style:solid;">Polearm</th></tr>
       <tr><th rowspan="2">Dracones</th>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka.J</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>J.Tanaka</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Tada</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
@@ -191,11 +191,11 @@
 
 
       <tr><th rowspan="2">Kuroganeshu</th>
-          <td colspan="3" style="border-style:dotted solid;"><div>???</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Sagamigawa</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka.k</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>K.Tanaka</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>???</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Fudo</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
       </tr>
       <tr><td><input size="3" id="1-3-1-1-n" type="text" onchange="sendResult(this.id)"></input></td>
@@ -224,13 +224,13 @@
         <th style="border-width:1px;border-style:solid;"></th>
         <th colspan="6" style="border-width:1px;border-style:solid;">Sword &amp; Shield</th>
         <th colspan="6" style="border-width:1px;border-style:solid;">Longsword</th>
-        <th colspan="6" style="border-width:1px;border-style:solid;">Poleaxe</th></tr>
-      <tr><th rowspan="2">Team1</th>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+        <th colspan="6" style="border-width:1px;border-style:solid;">Polearm</th></tr>
+      <tr><th rowspan="2">Dracones</th>
+          <td colspan="3" style="border-style:dotted solid;"><div>J.Tanaka</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tada</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tony</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
       </tr>
 
@@ -254,12 +254,12 @@
       </tr>
 
 
-      <tr><th rowspan="2">Team2</th>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+      <tr><th rowspan="2">Sanglier</th>
+          <td colspan="3" style="border-style:dotted solid;"><div>Joshua</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Satou</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Ami</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
       </tr>
 
@@ -283,12 +283,12 @@
       </tr>
 
 
-      <tr><th rowspan="2">Team3</th>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+      <tr><th rowspan="2">Kuroganeshu</th>
+          <td colspan="3" style="border-style:dotted solid;"><div>Sagamigawa</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>K.Tanaka</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Fudo</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
       </tr>
       <tr><td><input size="3" id="2-3-1-1-n" type="text" onchange="sendResult(this.id)"></input></td>
@@ -317,13 +317,13 @@
         <th style="border-width:1px;border-style:solid;"></th>
         <th colspan="6" style="border-width:1px;border-style:solid;">Sword &amp; Shield</th>
         <th colspan="6" style="border-width:1px;border-style:solid;">Longsword</th>
-        <th colspan="6" style="border-width:1px;border-style:solid;">Poleaxe</th></tr>
-      <tr><th rowspan="2">Team1</th>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+        <th colspan="6" style="border-width:1px;border-style:solid;">Polearm</th></tr>
+      <tr><th rowspan="2">Dracones</th>
+          <td colspan="3" style="border-style:dotted solid;"><div>J.Tanaka</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tada</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tony</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
       </tr>
 
@@ -347,12 +347,12 @@
       </tr>
 
 
-      <tr><th rowspan="2">Team2</th>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+      <tr><th rowspan="2">Sanglier</th>
+          <td colspan="3" style="border-style:dotted solid;"><div>Joshua</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Satou</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Ami</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
       </tr>
 
@@ -376,12 +376,12 @@
       </tr>
 
 
-      <tr><th rowspan="2">Team3</th>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+      <tr><th rowspan="2">Kuroganeshu</th>
+          <td colspan="3" style="border-style:dotted solid;"><div>Sagamiagawa</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>K.Tanaka</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Fudo</div></td>
           <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
       </tr>
       <tr><td><input size="3" id="3-3-1-1-n" type="text" onchange="sendResult(this.id)"></input></td>
