--- a/table.html
+++ b/table.html
@@ -5,15 +5,14 @@
     margin:0px;padding:0px;
     width:100%;
     background:black;
-    height:80px;
+    height:150px;
 }
 .view table{
     border-collapse: collapse;
         border-spacing: 0;
     width:100%;
-    height:14%;
-    margin:0px;padding:0px;
-   font-size:30px;
+    margin:0px;padding:0px 0px 30px 0px;
+   font-size:48px;
    color:white;
    text-align:center;
    font-weight:bold;
@@ -387,9 +386,9 @@ div{
         <th style="border-width:1px;border-style:solid;"></th>
         <th colspan="6" style="border-width:1px;border-style:solid;">Sword &amp; Shield</th>
         <th colspan="6" style="border-width:1px;border-style:solid;">Longsword</th>
-        <th colspan="6" style="border-width:1px;border-style:solid;">Poleaxe</th></tr>
+        <th colspan="6" style="border-width:1px;border-style:solid;">Polearm</th></tr>
       <tr height="10%" width="150px"><th rowspan="2"><img src="Dracones.png" height="108" width="85" style="padding:8px;"></th>
-          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Tanaka.J</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>J.Tanaka</div></td>
           <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Total</div></td>
           <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Tada</div></td>
           <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Total</div></td>
@@ -455,11 +454,11 @@ div{
       </tr>
 
       <tr height="10%"><th rowspan="2"><img src="Kuroganeshu.png" height="108" width="85" style="padding:8px;"></th>
-          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>???</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Sagamigawa</div></td>
           <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Tanaka.K</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>K.Tanaka</div></td>
           <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>???</div></td>
+          <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Fudo</div></td>
           <td colspan="3" style="border-style:dotted solid;font-size:28px;"><div>Total</div></td>
       </tr>
       <tr><td id="3-1-1-n" style="border-style:dotted dotted solid solid;"></td>
