--- a/viewer.html
+++ b/viewer.html
@@ -1,21 +1,30 @@
 <html>
   <head>
     <style>
+@font-face {
+    font-family: 'VsFont';
+    src: url('wound.ttf')  format('truetype'); /* Safari, Android, iOS */
+    }
+
+@font-face {
+    font-family: 'MedFont';
+    src: url('Augusta.ttf')  format('truetype'); /* Safari, Android, iOS */
+    }
 .view {
     margin:0px;padding:0px;
     width:100%;
     background:black;
-    height:120px;
+    height:160px;
 }
 .view table{
     border-collapse: collapse;
         border-spacing: 0;
     width:100%;
     margin:0px;padding:0px 0px 48px 0px;
-   font-size:44px;
+   font-size:48px;
    color:white;
    text-align:center;
-   font-weight:bold;
+   font-family: 'MedFont';
 }
 .board {
     margin:0px;padding:0px;
@@ -31,8 +40,8 @@
 }
 
 .vs{
-   font-weight:bold;
-   font-size:92px;
+   font-family: 'MedFont';
+   font-size:88px;
    color:#303030;
    padding-left:48px;
    padding-right:48px;
@@ -40,13 +49,20 @@
 }
 
 .fanim {
+   font-family: 'VsFont';
    background:white;
    color:black;
-   font-weight:bold;
-    font-size:192px;
+    font-size:280px;
     width:266px;
+    height:266px;
+    padding:0px 0px 90px 0px;
+    vertical-align:center;
 
-    border:4px solid black;
+    border:2px solid black;
+
+-webkit-box-shadow: 10px 10px 5px 0px rgba(107,107,107,1);
+-moz-box-shadow: 10px 10px 5px 0px rgba(107,107,107,1);
+box-shadow: 10px 10px 5px 0px rgba(107,107,107,1);
 
     -moz-border-radius-bottomleft:18px;
     -webkit-border-bottom-left-radius:18px;
@@ -68,11 +84,18 @@
 .fscore {
    background:white;
    color:black;
-   font-weight:bold;
-    font-size:192px;
+   font-family: 'VsFont';
+    font-size:280px;
     width:266px;
+    height:266px;
+    padding:0px 0px 90px 0px;
 
-    border:4px solid black;
+
+    vertical-align:center;
+    border:2px solid black;
+ -webkit-box-shadow: 10px 10px 5px 0px rgba(107,107,107,1);
+-moz-box-shadow: 10px 10px 5px 0px rgba(107,107,107,1);
+box-shadow: 10px 10px 5px 0px rgba(107,107,107,1);
 
     -moz-border-radius-bottomleft:18px;
     -webkit-border-bottom-left-radius:18px;
@@ -111,9 +134,9 @@
 .fnamel {
    background-color:black;
    color:white;
-   font-weight:bold;
    font-size:64px;
    width:464px;
+    font-family: 'MedFont';
 
     border:2px solid white;
 
@@ -129,8 +152,8 @@
 .fnamer {
    background-color:black;
    color:white;
-   font-weight:bold;
    font-size:64px;
+    font-family: 'MedFont';
    width:464px;
 
     border:2px solid white;
@@ -373,7 +396,7 @@ div{
   <body>
     <div class="view">
     <table>
-      <tr id="category"></tr>
+      <tr id="category" style="font-size:78px"></tr>
       <tr id="phase"></tr>
     </table>
     </div>
