--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
   </head>
   <body>
     <ul>
-       <li><a href="http://steelscore3.herokuapp.com/counter?side=0">Judge side A</a></li>
-       <li><a href="http://steelscore3.herokuapp.com/counter?side=1">Judge side B</a></li>
+       <li><a href="http://steelscore3.herokuapp.com/counter?jid=0">Judge A</a></li>
+       <li><a href="http://steelscore3.herokuapp.com/counter?jid=1">Judge B</a></li>
+       <li><a href="http://steelscore3.herokuapp.com/counter?jid=2">Judge C</a></li>
+       <li><a href="http://steelscore3.herokuapp.com/counter?jid=3">Judge D</a></li>
        <li><a href="http://steelscore3.herokuapp.com/master">Control</a></li>
        <li><a href="http://steelscore3.herokuapp.com/table">View</a></li>
   </body>
